--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
               </div>
             </div>
 
+            <div class="input-div">
+              <label for="e-mail" class="input-label">E-posta</label>
+              <div class="input-div-in">
+                <input type="text" name="e-mail" id="e-mail" class="input-name">
+                <svg class="icon icon-mail" width="18" height="24">
+                  <use href="./images/icons.svg#icon-mail"></use>
+                </svg>
+              </div>
+            </div>
             
 
 
