--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         </div>
       </div>
     </footer>
+
     <div class="modal-open">
       <modal-window class="modal">
         <div class="modal-container">
@@ -87,8 +88,7 @@
             </svg>
           </button>
           <p class="modal-p">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime,
-            labore.
+            Leave your contacts and we will call you back
           </p>
           <form action="">
             <div class="input-div">
@@ -120,7 +120,8 @@
                 </svg>
               </div>
             </div>
-            
+              
+
 
 
 
